<resources>
    <string name="app_name">Kolędy</string>
    <string name="intro">Wprowadzenie</string>
    <string name="search">Szukaj</string>
    <string name="size">Rozmiar czcionki</string>
    <string name="increase">Powiększ</string>
    <string name="restore">Przywróć</string>
    <string name="decrease">Pomniejsz</string>
    <string name="close">Zamknij</string>
    <string name="settings">Ustawienia</string>
    <string name="carol">Kolęda</string>
    <string name="theme">Wybierz motyw</string>
    <string name="theme_light">Motyw jasny</string>
    <string name="theme_dark">Motyw ciemny</string>
    <string name="device_theme">Używaj motywu systemowego</string>
    <string name="scale_normal">Wyłącz tryb powiększony</string>
    <string name="scale_large">Włącz tryb powiększony</string>
    <string name="toast_too_big">Nie można już zwiększyć rozmiaru czcionki</string>
    <string name="toast_too_small">Nie można już zmniejszyć rozmiaru czcionki</string>
    <string name="toast_reset_done">Przywrócono rozmiar czcionki</string>
    <string name="toast_size_unchanged">Czcionka jest już domyślnego rozmiaru</string>
    <string name="slide_1_desc">Aplikacja Kolędy zawiera teksty do najpopularniejszych kolęd.</string>
    <string name="slide_2_desc">Po wybraniu kolędy z listy można zmienić rozmiar wyświetlanego tekstu, ciągle mając go na oku.</string>
    <string name="slide_3_desc">Aby ułatwić widoczność zarówno tekstu jak i listy kolęd można wybrać tryb powiększony, znajdujący się w ustawieniach.</string>
    <string name="slide_text_size">Rozmiar tekstu</string>
    <string name="slide_scale">Tryb powiększony</string>
    <string name="suggestion">Masz sugestię, albo widzsz błąd?\n<u>Daj mi znać!</u></string>
    <string name="info">v1.0.1</string>
</resources>