<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <RadioGroup
            android:id="@+id/radio_theme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/theme_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radio_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/theme_light"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radio_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_dark"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radio_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_theme"
                android:textSize="15sp" />
        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/scale_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scale_large"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>
