<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_list">

    <fragment
        android:id="@+id/nav_list"
        android:name="io.qxtno.carols.fragments.ListFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_listFragment_to_carolFragment"
            app:destination="@id/nav_carol" />
        <action
            android:id="@+id/action_nav_list_to_settingsFragment"
            app:destination="@id/nav_settings" />
    </fragment>
    <fragment
        android:id="@+id/nav_carol"
        android:name="io.qxtno.carols.fragments.CarolFragment"
        android:label="@string/carol">
        <action
            android:id="@+id/action_nav_carol_to_settingsFragment"
            app:destination="@id/nav_settings" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="io.qxtno.carols.fragments.SettingsFragment"
        android:label="@string/settings" />
</navigation>