<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/font_size_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:clickable="true"
        android:contentDescription="@string/size"
        android:focusable="true"
        android:soundEffectsEnabled="false"
        app:srcCompat="@drawable/ic_size" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/decrease_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/font_size_fab"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:contentDescription="@string/decrease"
        android:focusable="true"
        android:text="@string/decrease"
        android:textSize="15sp"
        android:visibility="gone"
        app:backgroundTint="@color/red"
        app:icon="@drawable/ic_remove" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/restore_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/decrease_fab"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/restore"
        android:focusable="true"
        android:text="@string/restore"
        android:textSize="15sp"
        android:visibility="gone"
        app:backgroundTint="@color/blue"
        app:icon="@drawable/ic_restore" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/increase_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/restore_fab"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/increase"
        android:focusable="true"
        android:text="@string/increase"
        android:textSize="15sp"
        android:visibility="gone"
        app:backgroundTint="@color/green"
        app:icon="@drawable/ic_add" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/carol_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:soundEffectsEnabled="false"
            android:text="" />
    </ScrollView>

</RelativeLayout>

